src/test/ui/glob-resolve1.stderr
error[E0425]: cannot find function `fpriv` in this scope
  --> $DIR/glob-resolve1.rs:22:5
   |
LL |     fpriv();
   |     ^^^^^ not found in this scope
   |
help: consider importing this function
   |
LL | use bar::fpriv;
   |

error[E0425]: cannot find function `epriv` in this scope
  --> $DIR/glob-resolve1.rs:23:5
   |
LL |     epriv();
   |     ^^^^^ not found in this scope
   |
help: consider importing this function
   |
LL | use bar::epriv;
   |

error[E0423]: expected value, found enum `B`
  --> $DIR/glob-resolve1.rs:24:5
   |
LL |     B;
   |     ^
   |
note: the enum is defined here
  --> $DIR/glob-resolve1.rs:12:5
   |
LL |     pub enum B { B1 }
   |     ^^^^^^^^^^^^^^^^^
help: you might have meant to use the following enum variant
   |
LL |     B::B1;
   |     ^^^^^

error[E0425]: cannot find value `C` in this scope
  --> $DIR/glob-resolve1.rs:25:5
   |
LL |     C;
   |     ^ not found in this scope
   |
help: consider importing this unit struct
   |
LL | use bar::C;
   |

error[E0425]: cannot find function `import` in this scope
  --> $DIR/glob-resolve1.rs:26:5
   |
LL |     import();
   |     ^^^^^^ not found in this scope
   |
help: consider importing this function
   |
LL | use other::import;
   |

error[E0412]: cannot find type `A` in this scope
  --> $DIR/glob-resolve1.rs:28:11
   |
LL |     pub enum B { B1 }
   |     ---------- similarly named enum `B` defined here
...
LL |     foo::<A>();
   |           ^
   |
help: an enum with a similar name exists
   |
LL |     foo::<B>();
   |           ^
help: consider importing this enum
   |
LL | use bar::A;
   |

error[E0412]: cannot find type `C` in this scope
  --> $DIR/glob-resolve1.rs:29:11
   |
LL |     pub enum B { B1 }
   |     ---------- similarly named enum `B` defined here
...
LL |     foo::<C>();
   |           ^
   |
help: an enum with a similar name exists
   |
LL |     foo::<B>();
   |           ^
help: consider importing this struct
   |
LL | use bar::C;
   |

error[E0412]: cannot find type `D` in this scope
  --> $DIR/glob-resolve1.rs:30:11
   |
LL |     pub enum B { B1 }
   |     ---------- similarly named enum `B` defined here
...
LL |     foo::<D>();
   |           ^
   |
help: an enum with a similar name exists
   |
LL |     foo::<B>();
   |           ^
help: consider importing this type alias
   |
LL | use bar::D;
   |

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0412, E0423, E0425.
For more information about an error, try `rustc --explain E0412`.
